fixed issue with upload preview not resizing, will need to move upload component to navbar, have not been able to hide scrollbar in upload modal

--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,18 @@
 .margin-0 {
   margin: 0;
 }
+
+/* The Close Button */
+.close {
+  color: white;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
+}
