--- a/src/containers/category-image/CategoryImage.css
+++ b/src/containers/category-image/CategoryImage.css
@@ -38,18 +38,3 @@
 .top-line {
     display: inline;
 }
-
-/* The Close Button */
-.close {
-    color: white;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: white;
-    text-decoration: none;
-    cursor: pointer;
-}
