--- a/src/containers/image/specific-image/SpecificImage.css
+++ b/src/containers/image/specific-image/SpecificImage.css
@@ -1,3 +1,7 @@
 .image-margin {
     margin-bottom: 10px;
 }
+
+.detail-margin {
+    margin-bottom: 45px;
+}
