--- a/src/containers/upload/Upload.css
+++ b/src/containers/upload/Upload.css
@@ -1,5 +1,5 @@
 .upload-buttons {
-    width: 75%;
+    width: 100%;
     margin-bottom: 10px;
     font-size: 75%;
 }
@@ -7,3 +7,22 @@
 .upload-title-padding {
     padding-top: 20px;
 }
+
+.upload-container {
+    z-index: 1;
+    position: fixed; /* Stay in place */
+    width: 100%;
+    height: 100%;
+    top: 0;
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.upload-content {
+    height: fit-content;
+    background-color: black;
+}
+
+/*.upper-container {*/
+    /*overflow: hidden;*/
+/*}*/
